# proxy-doctor

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
app/: menu_bar.py  setup_app.py
assets/: proxy-doctor.icns
plugins/swiftbar/: proxy-doctor.5m.sh
src/proxy_doctor/: __init__.py  __main__.py  cli.py  core.py  daemon.py  daemon_loop.py  editors.py  mcp_server.py  notify.py  state.py  updater.py
tests/: test_cli.py  test_core.py  test_daemon.py  test_editors.py  test_mcp.py  test_notify.py  test_state.py  test_updater.py
