[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy-doctor"
version = "0.1.0"
description = "Diagnose proxy misconfigurations that break AI coding tools (Cursor, VS Code, Windsurf)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Jiansen He"}]
keywords = ["proxy", "cursor", "vscode", "windsurf", "network", "diagnostic", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Networking",
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0.0"]
dev = ["ruff", "pytest"]

[project.scripts]
proxy-doctor = "proxy_doctor.cli:main"

[project.entry-points."mcp.servers"]
proxy-doctor = "proxy_doctor.mcp_server:mcp"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
